# Siksaksuk

./: .gitignore  CMakeLists.txt  Player.h  main.cpp  prepare_images.py
dependencies/soil/: CMakeLists.txt
include/: Image.h
include/tk/: Animation.h  Clock.h  Image.h  Render.h
source/: Image.cpp
